# cv-generator

./: .gitignore  CLAUDE.md  README.md  README_WORKFLOW.md  SINGLE_PAGE_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml  requirements.txt  run_workflow_demo.sh
config/: .env.example  __init__.py  config.py  config.yaml  settings.py
demo/: integration_demo.py
demo_workspace_20250916_181356/: data_scientist_job.txt
demo_workspace_20250916_181356/templates/: cover_letter_template_single_page.html
demo_workspace_20250916_184723/: full_stack_developer_job.txt
demo_workspace_20250916_184723/templates/: cover_letter_template.html
demo_workspace_20250917_100343/: demo_profile.yaml  senior_engineer_job.txt
demo_workspace_20250917_100343/templates/: cover_letter_template.html  cv_template.html
docs/: PLAYWRIGHT_SETUP.md  PREVIEW_PDF_SYSTEM.md
examples/: demo_workflow.py  job_analyzer_example.py  preview_and_pdf_examples.py  profile_matcher_example.py  single_page_template_example.py
src/: __init__.py  main.py
src/agents/: README.md  __init__.py  job_analyzer.py  pdf_generator.py  preview_generator.py  profile_matcher.py  template_customizer.py
src/models/: __init__.py  job_data.py  match_result.py  user_profile.py
src/utils/: file_manager.py  logging_config.py  scraper.py  template_engine.py  yaml_parser.py
src/workflows/: __init__.py  cv_generation_workflow.py  state_manager.py  (+1 more)
templates/: context.yaml  cv_template.html
tests/: test_job_analyzer.py  test_preview_pdf_system.py  test_single_page_constraints.py  test_workflow_integration.py
(+1 files in other folders)
