[project]
name = "cv-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "jinja2>=3.1.6",
    "langgraph>=0.6.7",
    "openai>=1.107.2",
    "playwright>=1.55.0",
    "pydantic[email]>=2.11.9",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
